[workspace.package]
version = "0.5.0"
authors = ["Anatoly Bugakov"]
description = "Ultibi is a BI tool for no code data analysis"
documentation = "https://ultimabi.uk/ultibi-frtb-book/"
publish = false
license-file = "LICENSE"
repository = "https://github.com/ultima-ib/ultima/"

[workspace]
members = ['template_drivers', 'ultibi', 'frtb_engine', 'pyultima', 'ultibi/ultibi_server','ultibi/ultibi_core']
# temporarily exclude pyultima
# https://github.com/PyO3/maturin/issues/1374
# Otherwise cargo chief picks it up for compilation and it fails
default-members = ['template_drivers', 'ultibi', 'frtb_engine', 'ultibi/ultibi_server', 'ultibi/ultibi_core']


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.32.1", features = [
    "performant", 
    "strings",
    "ndarray",
    "lazy",
    "is_in",
    "dtype-categorical",
    "serde",
    "diagonal_concat",
    "serde-lazy" 
] }
toml = "0.7.2"
once_cell = "1.12"
dashmap = "5.4.0"

[workspace.metadata.publish]
order = ["ultibi_core", "ultibi_server", "ultibi"]
