[workspace.package]
version = "0.7.0"
authors = ["Anatoly Bugakov"]
description = "Ultibi is a BI tool for no code data analysis"
documentation = "https://ultimabi.uk/ultibi-frtb-book/"
publish = false
license-file = "LICENSE"
repository = "https://github.com/ultima-ib/ultima/"

[workspace]
resolver = "2"
members = ['template_drivers', 'ultibi', 'frtb_engine', 'pyultima', 'ultibi/ultibi_server','ultibi/ultibi_core']
# temporarily exclude pyultima
# https://github.com/PyO3/maturin/issues/1374
# Otherwise cargo chief picks it up for compilation and it fails
default-members = ['template_drivers', 'ultibi', 'frtb_engine', 'ultibi/ultibi_server', 'ultibi/ultibi_core']
exclude = ['templates']


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#  git = "https://github.com/pola-rs/polars", tag="py-0.20.27"
polars = { version = "0.40.0", features = [
    "performant", 
    "strings",
    "ndarray",
    "lazy",
    "is_in",
    "dtype-categorical",
    "serde",
    "diagonal_concat",
    "serde-lazy"
] }
polars-plan = { version = "0.40.0", features = ["ffi_plugin"]}
polars-arrow = {version = "0.40.0", features=["arrow_rs"]}
arrow-array = "51" # must match connector-x
toml = "0.8.8"
once_cell = "1.12"
dashmap = "5.4.0"

[workspace.metadata.publish]
order = ["ultibi_core", "ultibi_server", "ultibi"]
