[package]
name = "base_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
toml = "0.5"
polars = {version = "0.23.2", features=["strings", "ndarray", "lazy", "is_in", "dtype-categorical", "serde", "csv-file", "diagonal_concat"]}
log = "0.4"
derivative = "2.2"
once_cell = "1.12"

[features]
#default = ["FRTB"] # To avoid rust-analyzer showing error. To be removed.
#FRTB = ["dep:frtb_engine"] # If not used: none of the selected packages contains these features: FRTB
