[package]
name = "base_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true, features=["derive"]}
polars = {workspace = true, features=["strings", "ndarray", "lazy", "is_in", "dtype-categorical", "serde", "csv-file", "diagonal_concat"]}
serde_json = {workspace = true}
toml = {workspace = true}
once_cell = {workspace = true}
log = "0.4"
derivative = "2.2"
#AWS S3
aws-config = {verison="0.49.0", optional=true}
aws-sdk-s3 = {verison="0.19.0", optional=true}
tokio = { version = "1.21.2", features = ["rt-multi-thread"] , optional=true }
futures = { version = "0.3", optional=true }
#Cache
dashmap = {workspace = true, optional=true}

[features]
default = []
aws_s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio", "dep:futures"]
cache = ["dep:dashmap"]