[package]
name = "driver"
version = "0.1.0"
edition = "2021"
default-run = "one_off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
base_engine = {path = "../base_engine"}
frtb_engine = {path = "../frtb_engine", optional=true}
mimalloc = { version = "0.1.29", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
tokio = {version = "1.21.0", features=["full"]}
toml = "0.5.9"
actix-web = "4"
[dev-dependencies]
reqwest = "0.11"

[features]
#default = ["FRTB"] # To avoid rust-analyzer showing error. To be removed.
FRTB = ["frtb_engine"] # feature FRTB of my lib activate optional dep frtb_engine
FRTB_CRR2 = ["FRTB", "frtb_engine/CRR2"] # feature FRTB_CRR2 activates optional dep frtb_engine with it's CRR2 feature, but only CRR2