[package]
name = "frtb_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_engine = {path = "../base_engine"}
polars = {version = "0.24.0", features=["strings", "ndarray", "lazy", "is_in", "list", "dtype-categorical", "performant", "partition_by", "concat_str"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1"
ndarray = {version = "0.15.6", features = ["matrixmultiply-threading", "rayon", "serde"] }
once_cell = "1.12"
rayon = "1.5.3"
strum = {version="0.24", features = ["derive"] }
log = "0.4"
yearfrac = "0.1.3"
[dev-dependencies]

[features]
CRR2 = []
