[package]
name = "frtb_pyengine"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ultibi_frtb"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
ultibi = { path = "../ultibi", features=["ui", "aws_s3", "db"] }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
