[package]
name = "pyfrtb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfrtb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
polars = { version = "0.25.1" }
polars-arrow = { version = "0.25.1" }
base_engine = { path = "../base_engine" }
frtb_engine = { path = "../frtb_engine" }
serde_json = {workspace = true}

