[package]
name = "pyultima"
version.workspace = true
edition = "2021"
publish = false
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ultibi"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "ultibi.rust_module.ultima_pyengine"

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py37"] }
polars = { workspace = true }
polars-arrow = { workspace = true }
ultibi = { path = "../ultibi", features=["ui"] }
frtb_engine = { path = "../frtb_engine", features=["CRR2"] }
serde_json = {workspace = true}
thiserror = "1.0.38"

[features]
