[package]
name = "pyultima"
version.workspace = true
edition = "2021"
publish = false
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ultibi"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "ultibi.rust_module.ultibi_engine"

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py37"] }
polars = { workspace = true }
polars-arrow = { workspace = true }
ultibi = { path = "../ultibi", features=["ui"] }
frtb_engine = { path = "../frtb_engine", features=["CRR2"] }
serde_json = {workspace = true}
thiserror = "1.0.38"
once_cell = "1.17.1"
ciborium = "0.2"

[features]
