[package]
name = "pyultima"
version.workspace = true
edition = "2021"
publish = false
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyultima"
crate-type = ["rlib", "cdylib"]

[package.metadata.maturin]
name = "ultibi.rust_module.ultibi_engine"

[dependencies]
ultibi = { path = "../ultibi", features=["ui", "db"] }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
openssl = { version = "0.10", features = ["vendored"] }
polars = { workspace = true }
frtb_engine = { path = "../frtb_engine", features=["CRR2"] }
serde_json = {workspace = true}
thiserror = "1.0.38"
once_cell = "1.17.1"
ciborium = "0.2"
serde-pickle = { version = "1" }

[features]
