[package]
name = "quant_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
class_name_derive = { path = "../quant_engine/src/util/macros/class_name_derive" }
yearfrac = "0.1.2"

serde = { version = "1.0.136", features = ["derive"] }
serde_json ="1.0.79"
chrono = "0.4.19"
phf = { version = "0.10.1", features = ["macros"] }