[package]
name = "ultibi"
version.workspace = true
edition = "2021"
publish = true
license-file.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultibi_core = {path = "ultibi_core"}
ultibi_server = {path = "ultibi_server", optional = true}

[features]
default = []
ui = ["ultibi_server"]
db = ["ultibi_core/db"]
