[package]
name = "ultibi_core"
version.workspace = true
edition = "2021"
publish = true
license-file.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
polars = { workspace = true, features = [
    "performant",
    "strings",
    "ndarray",
    "lazy",
    "is_in",
    "dtype-categorical",
    "serde",
    "csv-file",
    "diagonal_concat",
    "describe",
] }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
derivative = "2.2"
thiserror = "*"
#AWS S3
aws-config = { version = "0.49.0", optional = true }
aws-sdk-s3 = { version = "0.19.0", optional = true }
tokio = { version = "1.21.2", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
#Cache
dashmap = { workspace = true }
# Open API Swagger
quote = "1.0.26" # Needs to be specified for utoipa to build
utoipa = { git="https://github.com/juhaku/utoipa", optional = true} # TODO change to version
# Other Utils
typed-builder="0.14.0"
# DB
connectorx = { version = "0.3.1", optional = true }



[features]
default = []
aws_s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio", "dep:futures"]
openapi = ["dep:utoipa"]
db = ["dep:connectorx"]
