[package]
name = "ultibi_core"
version.workspace = true
edition = "2021"
publish = true
license-file.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
polars = { workspace = true, features = [
    "performant",
    "strings",
    "ndarray",
    "lazy",
    "is_in",
    "dtype-categorical",
    "serde",
    "diagonal_concat",
    "describe",
] }
polars-plan = { workspace = true }
polars-arrow = { workspace = true, features=["arrow_rs"], optional=true }
arrow-array = { workspace = true, optional=true }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
derivative = "2.2"
thiserror = "*"
#AWS S3
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
tokio = { version = "1.21.2", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
#Cache
dashmap = { workspace = true }
# Open API Swagger
quote = "1.0.26" # Needs to be specified for utoipa to build
utoipa = { version="4.1.0", optional = true} # TODO change to version
# DB
connectorx = {git="https://github.com/AnatolyBuga/connector-x", branch = "arrow49", features=["dst_arrow", "src_mysql"], optional = true}



[features]
default = []
aws_s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio", "dep:futures"]
openapi = ["dep:utoipa"]
db = ["dep:connectorx", "dep:polars-arrow", "dep:arrow-array", "polars-arrow/arrow_rs"]
