[package]
name = "ultibi_core"
version.workspace = true
edition = "2021"
publish = true
license-file.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
polars = { workspace = true, features = [
    "performant",
    "strings",
    "ndarray",
    "lazy",
    "is_in",
    "dtype-categorical",
    "serde",
    "diagonal_concat",
    "describe",
] }
polars-plan = { workspace = true }
polars-arrow = { workspace = true, features=["arrow_rs"], optional=true }
arrow-array = { workspace = true, optional=true }
serde_json = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
derivative = "2.2"
thiserror = "*"
#Cache
dashmap = { workspace = true }
# Open API Swagger
# TODO remove if compiles without quote = "1.0.26" # Needs to be specified for utoipa to build
utoipa = { version="4.1.0", optional = true} # TODO change to version
# DB
connectorx = {git="https://github.com/AnatolyBuga/connector-x", branch = "arrow51", features=["dst_arrow", "src_mysql"], optional = true}



[features]
default = []
openapi = ["dep:utoipa"]
db = ["dep:connectorx", "dep:polars-arrow", "dep:arrow-array", "polars-arrow/arrow_rs"]
