[package]
name = "ultibi_server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultibi_core = { path = "../ultibi_core"  }
dotenv = "0.15"
actix-web = "4"
anyhow = "1"
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tokio = { version = "1.21.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
pretty_env_logger = "0.4"
log = "*"
mime = "*"