[package]
name = "rust_py_measure"
edition = "2021"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_py_measure"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# pyultima = { path = "../../../pyultima" }
ultibi = { path = "../../../ultibi" }
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
pyo3-polars = {version="*", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
