[build-system]
requires = ["maturin>=1.0,<2"]
build-backend = "maturin"


[project]
name = "rust_py_measure"
description = "Rust extensions for ultibi"
readme = "README.md"
authors = [
  { name = "Anatoly Bugakov", email = "anatoly@ultimabi.uk" },
]
license = { file = "LICENSE" }
keywords = ["dataframe", "visualization","pivot","table","pivottable", "aggregation", "calculation", 
  "pivot-table", "frtb", "risk"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "License :: Free To Use But Restricted",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://ultimabi.uk/"
Documentation = "https://ultimabi.uk/ultibi-frtb-book/"
Repository = "https://github.com/ultima-ib/ultibi-frtb-book"

